--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
             <div class="brand-item">
                 <span class="brand-icon">✔️</span>
                 <h3>Over 50 Million Vehicles</h3>
-                <p>Celebrated globally on the road.</p>
+                <p>Celebrated globally.</p>
             </div>
             <div class="brand-item">
                 <span class="brand-icon">✔️</span>
                 <h3>Presence in 80+ Countries</h3>
-                <p>Bringing value to customers worldwide.</p>
+                <p>Global trust.</p>
             </div>
             <div class="brand-item">
                 <span class="brand-icon">✔️</span>
-                <h3>A Vehicle for Everyone</h3>
-                <p>Largest portfolio from mopeds to premium bikes.</p>
+                <h3>Industry Leader</h3>
+                <p>Innovation first.</p>
             </div>
         </div>
     </section>
@@ -78,25 +78,51 @@
                 </div>
             </div>
             <div class="model-card">
-                <img src="assets/zest.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest'">
+                <img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'">
                 <div class="model-info">
-                    <h3>TVS Zest 110</h3>
-                    <p>Live Full. Live Free.</p>
-                    <a href="models/zest110.html" class="btn-view">View Details</a>
+                    <h3>TVS Ronin</h3>
+                    <p>Modern-Retro Scrambler.</p>
+                    <a href="models/ronin.html" class="btn-view">View Details</a>
                 </div>
             </div>
         </div>
     </section>
 
+    <section class="contact-section">
+        <h2 class="section-title">Contact Us</h2>
+        <p class="section-subtitle">Get in touch with us for queries or bookings</p>
+        
+        <div class="contact-container">
+            <div class="contact-form-box">
+                <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                    <div class="form-group">
+                        <label>Name *</label>
+                        <input type="text" name="name" placeholder="Your fullname" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Email *</label>
+                        <input type="email" name="email" placeholder="Your email address" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Phone *</label>
+                        <input type="tel" name="phone" placeholder="Your phone number" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Message *</label>
+                        <textarea name="message" rows="5" placeholder="Write Your Message" required></textarea>
+                    </div>
+                    <button type="submit" class="btn-submit">Submit Message</button>
+                </form>
+            </div>
+            <div class="contact-visual">
+                <p>TVS<br>Tirumala</p>
+            </div>
+        </div>
+    </section>
+
     <div class="footer-contact-bar">
-        <div class="contact-item">
-            <div class="contact-icon-circle">✉️</div>
-            <a href="mailto:tirumalatvs716@gmail.com" style="color: white;">tirumalatvs716@gmail.com</a>
-        </div>
-        <div class="contact-item">
-            <div class="contact-icon-circle">📞</div>
-            <a href="tel:+919964946512" style="color: white;">+91 99649 46512</a>
-        </div>
+        <div class="contact-item">✉️ tirumalatvs716@gmail.com</div>
+        <div class="contact-item">📞 +91 99649 46512</div>
     </div>
 
     <footer class="main-footer">
@@ -131,8 +157,6 @@
         <div>Copyright © 2025 Tirumala TVS Bidarahalli.</div>
         <div>FOLLOW US: 📘 📷</div>
     </div>
-
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
 
 </body>
 </html>
