--- a/index.html
+++ b/index.html
@@ -88,6 +88,69 @@
         </div>
     </section>
 
+    <section style="background-color: white;">
+        <h2 class="section-title">Happy Riders</h2>
+        <p class="section-subtitle">Real experiences from our valued customers</p>
+        
+        <div class="testimonials-grid">
+            
+            <div class="testimonial-card">
+                <div class="star-rating">★★★★★</div>
+                <p>"The mileage is impressive for city rides, giving around 55 kmpl. The seat is very comfortable for my family. The suspension handles bad roads really well. Perfect for daily office goers!"</p>
+                <div class="customer-info">
+                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold;">UF</div>
+                    <div class="customer-details"><h4>Usama Faruqui</h4><span>Jupiter Owner</span></div>
+                </div>
+            </div>
+
+            <div class="testimonial-card">
+                <div class="star-rating">★★★★★</div>
+                <p>"I'm surprised to see the mileage! Getting nearly 60+ kmpl on highways. It's a 'Wicked' ride just like the name says. The digital display and bluetooth features are top notch."</p>
+                <div class="customer-info">
+                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold;">SA</div>
+                    <div class="customer-details"><h4>Safik Ahmed</h4><span>Raider 125 Owner</span></div>
+                </div>
+            </div>
+
+            <div class="testimonial-card">
+                <div class="star-rating">★★★★★</div>
+                <p>"If you want a thrilling ride, Ntorq is it. The exhaust sound turns heads! Bluetooth navigation is super helpful for my daily commute. It's a powerhouse on the road."</p>
+                <div class="customer-info">
+                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold;">FZ</div>
+                    <div class="customer-details"><h4>Faizan</h4><span>Ntorq Race XP Owner</span></div>
+                </div>
+            </div>
+
+            <div class="testimonial-card">
+                <div class="star-rating">★★★★★</div>
+                <p>"Riding is smooth and silent. I get a real range of 100km in Eco mode which is enough for 2 days. Charging at home is very convenient. Best decision to switch to EV!"</p>
+                <div class="customer-info">
+                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold;">MZ</div>
+                    <div class="customer-details"><h4>Md. Zeeshan</h4><span>iQube Owner</span></div>
+                </div>
+            </div>
+
+            <div class="testimonial-card">
+                <div class="star-rating">★★★★★</div>
+                <p>"Engine refinement is next level. Highway cruising at 80kmph feels buttery smooth. The GTT feature makes city traffic easy. It's a head-turner wherever I go."</p>
+                <div class="customer-info">
+                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold;">SH</div>
+                    <div class="customer-details"><h4>Shyam</h4><span>Ronin Owner</span></div>
+                </div>
+            </div>
+
+            <div class="testimonial-card">
+                <div class="star-rating">★★★★★</div>
+                <p>"Best 160cc bike hands down. Quick acceleration and impressive pickup. Handling is very sharp in city traffic. I love the aggressive look and the new headlight design."</p>
+                <div class="customer-info">
+                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold;">MN</div>
+                    <div class="customer-details"><h4>Manish</h4><span>Apache 160 Owner</span></div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
     <section class="contact-section">
         <h2 class="section-title">Contact Us</h2>
         <p class="section-subtitle">Get in touch with us for queries or bookings</p>
