--- a/models.html
+++ b/models.html
@@ -10,11 +10,14 @@
 
     <nav class="main-nav-container">
         <a href="index.html" class="logo-text">Tirumala <span>TVS</span></a>
-        <div class="nav-menu">
-            <a href="index.html">HOME ↗</a>
+        
+        <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+
+        <div class="nav-menu" id="navMenu">
+            <a href="index.html">HOME</a>
             <a href="index.html#about">ABOUT</a>
             <a href="models.html" style="color: var(--tvs-red);">INVENTORY</a>
-            <a href="index.html#contact">SERVICES</a>
+            <a href="index.html#contact">CONTACT</a>
         </div>
     </nav>
 
@@ -107,6 +110,13 @@
     <div class="copyright-bar">
         <div>Copyright © 2025 Tirumala TVS Bidarahalli.</div>
     </div>
+
+    <script>
+        function toggleMenu() {
+            var menu = document.getElementById("navMenu");
+            menu.classList.toggle("active");
+        }
+    </script>
 
 </body>
 </html>
