--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <header class="main-header">
         <div class="container header-top">
             <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
-            
             <div class="menu-toggle" onclick="toggleMenu()">☰</div>
             <div class="header-btn-group">
                 <a href="service.html" class="btn-header">Book Service</a>
@@ -84,10 +83,32 @@
         </div>
     </div>
 
+    <section class="section-padding">
+        <div class="container">
+            <div class="welcome-grid">
+                <div class="welcome-text">
+                    <span class="welcome-badge">AUTHORIZED DEALER</span>
+                    <h2>The Tirumala TVS Legacy</h2>
+                    <p>Welcome to Tirumala TVS, your most trusted partner for TVS Motor Company in Bangalore. We are dedicated to delivering the "Racing DNA" experience to every customer, offering a complete range of motorcycles, scooters, and electric vehicles.</p>
+                    <ul class="welcome-check-list">
+                        <li>✅ Genuine Spare Parts & Accessories</li>
+                        <li>✅ Certified Service Engineers</li>
+                        <li>✅ Best Exchange Value Assured</li>
+                        <li>✅ Quick Finance & Loan Options</li>
+                    </ul>
+                    <a href="about.html" class="btn btn-primary" style="margin-top: 20px;">Read More About Us</a>
+                </div>
+                <div class="welcome-image">
+                    <img src="assets/apache160.jpg" alt="Tirumala TVS Showroom" style="border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="section-padding bg-light">
         <div class="container">
-            <div class="text-center section-header" style="margin-bottom:40px;">
-                <h2 style="font-family:'Oswald'; color:#0b2351; font-size:2.5rem; text-transform:uppercase;">Top Selling Vehicles</h2>
+            <div class="section-header">
+                <h2>Top Selling Vehicles</h2>
                 <p>Our customers' favorite rides.</p>
             </div>
             <div class="grid-3">
@@ -133,6 +154,47 @@
                         <div class="clean-card-img"><img src="assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/600x400?text=Apache+160'"></div>
                     </div>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-padding">
+        <div class="container">
+            <div class="section-header">
+                <h2>Happy Riders</h2>
+                <p>What our customers say about Tirumala TVS.</p>
+            </div>
+            <div class="grid-3">
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"Excellent service! Bought my Ntorq 125 here. The delivery was on time and the staff explained all features clearly."</p>
+                    <div class="reviewer-name">- Rahul K.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"Best showroom in Bidarahalli. Very transparent pricing and quick loan approval process. Highly recommended!"</p>
+                    <div class="reviewer-name">- Priya S.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★☆</div>
+                    <p class="review-text">"Good servicing experience. They picked up my bike and dropped it back. Very convenient."</p>
+                    <div class="reviewer-name">- Amit Verma</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"Got my iQube electric scooter. The team guided me on the subsidy process very well."</p>
+                    <div class="reviewer-name">- Sneha R.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"Friendly staff and good ambience. Keep up the good work Tirumala TVS!"</p>
+                    <div class="reviewer-name">- Mohammed I.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"Wide range of helmets and accessories available too. One stop shop for TVS lovers."</p>
+                    <div class="reviewer-name">- Karthik Gowda</div>
+                </div>
             </div>
         </div>
     </section>
