--- a/models/rr310.html
+++ b/models/rr310.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apache RR 310 | Tirumala TVS</title>
+    <title>TVS Apache RR 310 | Tirumala TVS</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -18,67 +18,63 @@
                 <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
             </div>
         </div>
-        <div class="nav-bar" id="navMenu">
+        <div class="nav-bar">
             <div class="container">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
-                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
-                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a href="../index.html">Home</a></li>
+                    <li class="nav-item"><a href="../models.html">All Models</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="container back-btn-wrapper">
-        <a href="../models.html" class="btn-back">← Back to All Models</a>
-    </div>
-
-    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
-        <div class="container" style="text-align: center;">
-            <h1 class="model-title" style="color: #1a3b8c;">TVS Apache RR 310</h1>
-            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 2,72,000*</p>
+    <div class="model-page-header">
+        <div class="container">
+            <h1 class="model-title">TVS Apache RR 310</h1>
+            <div class="model-price">Starting at ₹ 2,72,000*</div>
+            <p style="margin-top:10px; color:#666;">The Ultimate Track Machine</p>
         </div>
     </div>
 
-    <div class="container pro-detail-section">
-        <div class="pro-detail-grid">
-            <div class="pro-text-side">
-                <h2>Overview</h2>
-                <p>The <strong>TVS Apache RR 310</strong> is the flagship racing machine. Developed on the racetrack, it features a unique reverse-inclined engine, throttle-by-wire technology, and advanced aerodynamics.</p>
-
-                <h2>Racing Performance</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 312.2 cc, Liquid-cooled, DOHC</li>
-                    <li><strong>Power:</strong> 34 PS @ 9700 rpm</li>
-                    <li><strong>Torque:</strong> 27.3 Nm @ 7700 rpm</li>
-                    <li><strong>0-60 km/h:</strong> 2.93 seconds</li>
-                    <li><strong>Top Speed:</strong> 160 km/h</li>
+    <section class="product-detail-section">
+        <div class="container product-grid">
+            <div class="product-image-wrapper">
+                <img src="../assets/rr310.jpg" alt="TVS Apache RR 310" onerror="this.src='https://placehold.co/800x600?text=Apache+RR+310'">
+            </div>
+            <div class="product-info">
+                <h3>Overview</h3>
+                <p>The TVS Apache RR 310 is a flagship racing machine, crafted to deliver exhilarating performance. With its reverse-inclined engine, throttle-by-wire technology, and advanced aerodynamics, it dominates the track and the road.</p>
+                <h3>Key Specifications</h3>
+                <ul class="specs-list">
+                    <li><span>Engine Capacity</span> <strong>312.2 cc</strong></li>
+                    <li><span>Max Power</span> <strong>34 PS @ 9700 rpm</strong></li>
+                    <li><span>Max Torque</span> <strong>27.3 Nm @ 7700 rpm</strong></li>
+                    <li><span>0-60 km/h</span> <strong>2.93 seconds</strong></li>
+                    <li><span>Top Speed</span> <strong>160 km/h</strong></li>
+                    <li><span>Cooling System</span> <strong>Liquid Cooled</strong></li>
+                    <li><span>Brakes</span> <strong>Dual Channel ABS</strong></li>
                 </ul>
-
-                <h2>Tech & Features</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Display:</strong> 5-inch Vertical TFT Screen</li>
-                    <li><strong>Modes:</strong> Track, Sport, Urban, Rain</li>
-                    <li><strong>Tyres:</strong> Michelin Road 5 Tyres</li>
-                    <li><strong>Tech:</strong> Throttle-by-Wire & GTT</li>
-                </ul>
-
-                <div style="margin-top: 40px;">
-                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
-                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                <div class="action-buttons">
+                    <a href="../testdrive.html" class="btn btn-primary btn-block">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline btn-block">Get Price Quote</a>
                 </div>
             </div>
-            <div class="pro-image-side">
-                <img src="../assets/rr310.jpg" alt="Apache RR 310" onerror="this.src='https://placehold.co/800x600?text=RR+310+Image'">
-            </div>
         </div>
-    </div>
+    </section>
 
     <footer>
-        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
+        <div class="footer-top-bar">
+            <div class="container text-center" style="color:white;">Need Help? Call Sales: +91 99649 46512</div>
+        </div>
+        <div class="footer-main">
+            <div class="container footer-cols">
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="../index.html">Home</a></li><li><a href="../service.html">Book Service</a></li><li><a href="../contact.html">Contact Us</a></li></ul></div>
+                <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
+                <div class="footer-col"><h4>Contact</h4><p>Sales: +91 99649 46512<br>Service: +91 99649 46511</p></div>
+            </div>
+        </div>
+        <div class="container footer-bottom"><div>Copyright © 2025 Tirumala TVS.</div></div>
     </footer>
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
